Species API model refactored
