# server/src/main/java/com/cezarykluczynski/stapi/server/species/query/SpeciesRestQuery.java
@@ -5,7 +5,7 @@ import com.cezarykluczynski.stapi.model.species.entity.Species;
 import com.cezarykluczynski.stapi.model.species.repository.SpeciesRepository;
 import com.cezarykluczynski.stapi.server.common.mapper.PageMapper;
 import com.cezarykluczynski.stapi.server.species.dto.SpeciesRestBeanParams;
-import com.cezarykluczynski.stapi.server.species.mapper.SpeciesRestMapper;
+import com.cezarykluczynski.stapi.server.species.mapper.SpeciesBaseRestMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
@@ -15,22 +15,21 @@ import javax.inject.Inject;
 @Service
 public class SpeciesRestQuery {
 
-	private SpeciesRestMapper speciesRequestMapper;
+	private SpeciesBaseRestMapper speciesRequestMapper;
 
 	private PageMapper pageMapper;
 
 	private SpeciesRepository speciesRepository;
 
 	@Inject
-	public SpeciesRestQuery(SpeciesRestMapper speciesRestMapper, PageMapper pageMapper,
-			SpeciesRepository speciesRepository) {
-		this.speciesRequestMapper = speciesRestMapper;
+	public SpeciesRestQuery(SpeciesBaseRestMapper speciesBaseRestMapper, PageMapper pageMapper, SpeciesRepository speciesRepository) {
+		this.speciesRequestMapper = speciesBaseRestMapper;
 		this.pageMapper = pageMapper;
 		this.speciesRepository = speciesRepository;
 	}
 
 	public Page<Species> query(SpeciesRestBeanParams speciesRestBeanParams) {
-		SpeciesRequestDTO speciesRequestDTO = speciesRequestMapper.map(speciesRestBeanParams);
+		SpeciesRequestDTO speciesRequestDTO = speciesRequestMapper.mapBase(speciesRestBeanParams);
 		PageRequest pageRequest = pageMapper.fromPageSortBeanParamsToPageRequest(speciesRestBeanParams);
 		return speciesRepository.findMatching(speciesRequestDTO, pageRequest);
 	}
